--- a/templates/Base_All.html
+++ b/templates/Base_All.html
@@ -223,7 +223,7 @@
 
                             {% csrf_token %}
                             <div class="btn {% block up_btn_color %} btn-primary {% endblock %}">
-{#                             id="{{ posts.salted_pk }}"#}
+                                {#                             id="{{ posts.salted_pk }}"#}
                                 <button type="submit" title="up vote" name="up_voted_It"
                                         value={{ posts.salted_pk }} class="" style="size: 9rem"
                                         onclick="vote_here(this.name, this.value)"><i class="fas fa-arrow-up"></i>
@@ -240,18 +240,23 @@
                         </div>
 
 
-                        <div class="row" style="padding: 1rem">
-                            <label for="{{ posts.salted_pk }}_comment"></label>
-                            <textarea class="form-control" style="background: white; " name="" id="{{ posts.salted_pk }}_comment" cols="100"
+                        {#                                                <div class="row" style="padding: 1rem">#}
+
+
+                        <form action="" class="ajax">
+                            {#                            <label for=""></label>#}
+                            <textarea class="form-control"
+                                      style="background: white; margin-top: 1rem; margin-bottom: 1rem" name="textarea"
+                                      cols="100"
                                       rows="2"
                                       placeholder="I feel you ..."></textarea>
 
-                            <button type="submit" title="what do you think?"
-                                    class="btn btn-primary" value="{{ posts.salted_pk }}"
-                                    name="comment"
-                                    onclick="comment(this.name, this.value)" >save
+                            <button type="submit" title="what do you think?" class="btn btn-primary"> save
                             </button>
-                        </div>
+                        </form>
+
+
+                        {#                                                </div>#}
 
 
                     </div>
