--- a/templates/Base_All.html
+++ b/templates/Base_All.html
@@ -34,6 +34,167 @@
     <meta name="msapplication-wide310x150logo" content="mstile-310x150.png"/>
     <meta name="msapplication-square310x310logo" content="mstile-310x310.png"/>
 
+
+
+    <link href='https://fonts.googleapis.com/css?family=Roboto:100' rel='stylesheet' type='text/css'>
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+
+    <style>
+        a {
+            text-decoration: none;
+        }
+
+        /***********************/
+        .menu {
+            list-style: none;
+            margin: 2em auto;
+            padding-left: 0;
+            width: 15em;
+        }
+
+        .menu a {
+            display: block;
+            color: white;
+            text-decoration: none;
+            text-transform: uppercase;
+        }
+
+        .menu li {
+            box-shadow: 3px 0 green inset;
+            padding-left: 1em;
+            margin-bottom: 5px;
+            height: 50px;
+            line-height: 50px;
+            transition: all .1s;
+        }
+
+        .menu li:hover,
+        li:active {
+            box-shadow: 15em 0 green inset;
+        }
+
+        .menu li i {
+            vertical-align: middle;
+            margin-top: -3px;
+        }
+
+        .menu li span {
+            margin-left: 6px;
+        }
+
+        nav {
+            font-family: 'Roboto', sans-serif;
+            position: absolute;
+            left: -15.25em;
+            z-index: 1000;
+            background: orangered;
+            text-align: left;
+            height: 100%;
+            top: 0;
+            box-shadow: 2px 2px 2px 0px rgba(0, 0, 0, 0.75);
+            padding-right: .25em;
+            font-weight: bold;
+            transition: all .5s;
+        }
+
+        nav.mostrar {
+            left: 0;
+        }
+
+        #oscuro {
+            position: absolute;
+            left: 0;
+            z-index: 1000;
+            background: rgba(0, 0, 0, .7);
+            text-align: left;
+            height: 100%;
+            width: 0;
+            top: 0;
+            box-shadow: 2px 2px 2px 0px rgba(0, 0, 0, 0.75);
+            padding-right: .25em;
+            transition: all .5s;
+        }
+
+        #oscuro.mostrar2 {
+            width: 100%;
+        }
+
+
+
+        .menusuperior #nav {
+            float: left;
+            position: relative;
+            z-index: 5000;
+            width: 25px;
+            cursor: pointer;
+            margin-left: 10px;
+            margin-top: 7px;
+        }
+
+        .menusuperior #nav span {
+            display: block;
+            height: 3px;
+            width: 20px;
+            background-color: #000;
+            margin-bottom: 3px;
+            transition: all .3s ease;
+        }
+
+        .menusuperior #nav span.rojo {
+            background-color: white;
+        }
+
+        .menusuperior #nav.active span:nth-of-type(1) {
+            -webkit-transform: translateY(6px) rotate(45deg);
+            transform: translateY(6px) rotate(45deg);
+        }
+
+        .menusuperior #nav.active span:nth-of-type(2) {
+            -webkit-transform: scale(0);
+            transform: scale(0);
+            opacity: 0;
+        }
+
+        .menusuperior #nav.active span:nth-of-type(3) {
+            -webkit-transform: translateY(-6px) rotate(-45deg);
+            transform: translateY(-6px) rotate(-45deg);
+        }
+
+
+
+        #nav-menu {
+            position: absolute;
+            z-index: 500;
+            height: 100%;
+            top: 40px;
+            right: 0px;
+            height: 460px;
+            border-left: 2px solid #434343;
+            transition: -webkit-transform .5s ease;
+            transition: transform .5s ease;
+            transition: transform .5s ease, -webkit-transform .5s ease;
+            content-box: border-box;
+        }
+
+        #nav-menu.active {
+            -webkit-transform: translateX(0);
+            transform: translateX(0);
+        }
+
+
+
+
+
+
+        #nav-menu .nav-item i {
+            font-size: 28px;
+            display: block;
+            margin-bottom: 10px;
+        }
+    </style>
+
+
     {% comment %}  **boot**  {% endcomment %}
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -107,14 +268,56 @@
 
 {#<h1 class="wow lightSpeedIn" id="title_it">Wall of Frustrations</h1>#}
 
-<div style="width: 80%">
+<div style="width: 80%" class="row">
+
+
+    <div id='oscuro'> </div>
+
+    <nav id='menu-lateral' role='navigation'>
+        <ul class='menu'>
+            <li><a href="{% url 'frustrations' %}" style="font-family: sans-serif"><span>Wall of Frustrations</span></a></li>
+            <li><a href="{% url 'wisdom' %}"><span>Wall of Wisdom</span></a></li>
+        </ul>
+    </nav>
+
+    <main>
+
+        <div class="menusuperior" style="padding: 1rem">
+            <div id="bars">
+                <div id="back">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+                <div id="nav">
+                    <span class="ham"></span>
+                    <span class="ham"></span>
+                    <span class="ham"></span>
+                </div>
+            </div>
+
+
+        </div>
+
+
+        <!--FIN CONTENIDO CONTENIDO -->
+    </main>
+
+
+
+
+
+
+
+
+
     {% block logo %}
+
         <a href="{% url 'secretes' %}">
             <img src="{% static  'wall headers/wall of secretes.png' %}" class="img-fluid" id="title_it"
                  alt="website logo"
                  style="max-height: 5rem;" title="uggghhhh">
         </a>
-
     {% endblock %}
 </div>
 
@@ -239,8 +442,9 @@
                         </div>
 
 
-                        {% for comments in  posts.comment_set.all %}
-                            <p>{{ comments }}</p>
+                        {% for comment in  posts.comment_set.all %}
+                            <p>hi</p>
+                            <p>{{ comment }}</p>
                         {% endfor %}
 
 
@@ -273,6 +477,67 @@
 {% endfor %}
 
 <br>
+
+
+    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+
+    <script>
+        $(document).ready(function() {
+            $('#bars').on('click', function() {
+                $('#nav').toggleClass("active");
+                $('#menu-lateral').toggleClass('mostrar');
+                $('#oscuro').toggleClass('mostrar2');
+                $('.menusuperior #nav span').toggleClass('rojo');
+            });
+            $('#menu-lateral a').on('click', function() {
+                $('#nav').toggleClass("active");
+                $('#menu-lateral').removeClass('mostrar');
+                $('#oscuro').removeClass('mostrar2');
+                $('.menusuperior #nav span').toggleClass('rojo');
+            });
+
+            $('#oscuro').on('click', function() {
+                $('#nav').toggleClass("active");
+                $('#menu-lateral').removeClass('mostrar');
+                $(this).removeClass('mostrar2');
+                $('.menusuperior #nav span').toggleClass('rojo');
+            });
+            $('#nav-menu').hide();
+
+            $('#ellipsis').on('click', function() {
+                $('#nav-menu').fadeToggle();
+            });
+
+
+            $(".nav-item").click(function() {
+                $(".nav-item").each(function() {
+                    $(this).removeClass("selected");
+                    $('#nav-menu').fadeOut('normal');
+                })
+                $(this).addClass("selected");
+                $("#nav, #nav-menu, .main, #mask").removeClass("active");
+                $('#nav-menu').fadeOut('normal');
+            });
+
+
+            $('#search').on('click', function() {
+                $('#buscador').toggleClass('buscar');
+            });
+
+
+
+        });
+    </script>
+
+
+
+
+
+
+
+
+
+
 
 
 {% block body %}
