--- a/templates/Base_All.html
+++ b/templates/Base_All.html
@@ -35,7 +35,6 @@
     <meta name="msapplication-square310x310logo" content="mstile-310x310.png"/>
 
 
-
     <link href='https://fonts.googleapis.com/css?family=Roboto:100' rel='stylesheet' type='text/css'>
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
@@ -121,7 +120,6 @@
         }
 
 
-
         .menusuperior #nav {
             float: left;
             position: relative;
@@ -162,7 +160,6 @@
         }
 
 
-
         #nav-menu {
             position: absolute;
             z-index: 500;
@@ -181,10 +178,6 @@
             -webkit-transform: translateX(0);
             transform: translateX(0);
         }
-
-
-
-
 
 
         #nav-menu .nav-item i {
@@ -271,11 +264,12 @@
 <div style="width: 80%" class="row">
 
 
-    <div id='oscuro'> </div>
+    <div id='oscuro'></div>
 
     <nav id='menu-lateral' role='navigation'>
         <ul class='menu'>
-            <li><a href="{% url 'frustrations' %}" style="font-family: sans-serif"><span>Wall of Frustrations</span></a></li>
+            <li><a href="{% url 'frustrations' %}" style="font-family: sans-serif"><span>Wall of Frustrations</span></a>
+            </li>
             <li><a href="{% url 'wisdom' %}"><span>Wall of Wisdom</span></a></li>
         </ul>
     </nav>
@@ -303,22 +297,15 @@
         <!--FIN CONTENIDO CONTENIDO -->
     </main>
 
-
-
-
-
-
-
-
-
-    {% block logo %}
-
-        <a href="{% url 'secretes' %}">
-            <img src="{% static  'wall headers/wall of secretes.png' %}" class="img-fluid" id="title_it"
-                 alt="website logo"
-                 style="max-height: 5rem;" title="uggghhhh">
-        </a>
-    {% endblock %}
+    <div class="row logo-it" style=" padding-left: 8%;">
+        {% block logo %}
+            <a href="{% url 'secretes' %}" class="">
+                <img src="{% static  'wall headers/wall of secretes.png' %}" class="img-fluid" id="title_it"
+                     alt="website logo"
+                     style="max-height: 5rem;" title="uggghhhh">
+            </a>
+        {% endblock %}
+    </div>
 </div>
 
 {% comment %}
@@ -479,66 +466,54 @@
 <br>
 
 
-    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
-    <script>
-        $(document).ready(function() {
-            $('#bars').on('click', function() {
-                $('#nav').toggleClass("active");
-                $('#menu-lateral').toggleClass('mostrar');
-                $('#oscuro').toggleClass('mostrar2');
-                $('.menusuperior #nav span').toggleClass('rojo');
-            });
-            $('#menu-lateral a').on('click', function() {
-                $('#nav').toggleClass("active");
-                $('#menu-lateral').removeClass('mostrar');
-                $('#oscuro').removeClass('mostrar2');
-                $('.menusuperior #nav span').toggleClass('rojo');
-            });
-
-            $('#oscuro').on('click', function() {
-                $('#nav').toggleClass("active");
-                $('#menu-lateral').removeClass('mostrar');
-                $(this).removeClass('mostrar2');
-                $('.menusuperior #nav span').toggleClass('rojo');
-            });
-            $('#nav-menu').hide();
-
-            $('#ellipsis').on('click', function() {
-                $('#nav-menu').fadeToggle();
-            });
-
-
-            $(".nav-item").click(function() {
-                $(".nav-item").each(function() {
-                    $(this).removeClass("selected");
-                    $('#nav-menu').fadeOut('normal');
-                })
-                $(this).addClass("selected");
-                $("#nav, #nav-menu, .main, #mask").removeClass("active");
-                $('#nav-menu').fadeOut('normal');
-            });
-
-
-            $('#search').on('click', function() {
-                $('#buscador').toggleClass('buscar');
-            });
-
-
-
+<script>
+    $(document).ready(function () {
+        $('#bars').on('click', function () {
+            $('#nav').toggleClass("active");
+            $('#menu-lateral').toggleClass('mostrar');
+            $('#oscuro').toggleClass('mostrar2');
+            $('.menusuperior #nav span').toggleClass('rojo');
         });
-    </script>
+        $('#menu-lateral a').on('click', function () {
+            $('#nav').toggleClass("active");
+            $('#menu-lateral').removeClass('mostrar');
+            $('#oscuro').removeClass('mostrar2');
+            $('.menusuperior #nav span').toggleClass('rojo');
+        });
+
+        $('#oscuro').on('click', function () {
+            $('#nav').toggleClass("active");
+            $('#menu-lateral').removeClass('mostrar');
+            $(this).removeClass('mostrar2');
+            $('.menusuperior #nav span').toggleClass('rojo');
+        });
+        $('#nav-menu').hide();
+
+        $('#ellipsis').on('click', function () {
+            $('#nav-menu').fadeToggle();
+        });
 
 
+        $(".nav-item").click(function () {
+            $(".nav-item").each(function () {
+                $(this).removeClass("selected");
+                $('#nav-menu').fadeOut('normal');
+            })
+            $(this).addClass("selected");
+            $("#nav, #nav-menu, .main, #mask").removeClass("active");
+            $('#nav-menu').fadeOut('normal');
+        });
 
 
+        $('#search').on('click', function () {
+            $('#buscador').toggleClass('buscar');
+        });
 
 
-
-
-
-
-
+    });
+</script>
 
 {% block body %}
 
