ready for deployment

--- a/templates/Base_All.html
+++ b/templates/Base_All.html
@@ -250,14 +250,13 @@
                         {% endfor %}
 
 
-                        {#                                                <div class="row" style="padding: 1rem">#}
 
 
 
 
 
 
-                        <form action="" class="ajax" method="post">
+{% comment %}                        <form action="" class="ajax" method="post">
                             <label for="{{ posts.salted_pk }}"></label>
                             <textarea class="form-control"
                                       style="background: white; margin-top: 1rem; margin-bottom: 1rem" name="textarea"
@@ -267,10 +266,9 @@
 
                             <button type="submit" title="what do you think?" class="btn btn-primary"> save
                             </button>
-                        </form>
+                        </form>{% endcomment %}
 
 
-                        {#                                                </div>#}
 
 
 
