--- a/templates/Base_All.html
+++ b/templates/Base_All.html
@@ -153,7 +153,7 @@
         <!--FIN CONTENIDO CONTENIDO -->
     </main>
 
-    <div class="row logo-it" style=" padding-left: 8%;">
+    <div class="logo-it" style=" padding-left: 8%;">
         {% block logo %}
             <a href="{% url 'secretes' %}" class="">
                 <img src="{% static  'wall headers/wall of secretes.png' %}" class="img-fluid" id="title_it"
@@ -161,6 +161,7 @@
                      style="max-height: 5rem;" title="uggghhhh">
             </a>
         {% endblock %}
+
     </div>
 </div>
 
