--- a/templates/wallOf/advice.html
+++ b/templates/wallOf/advice.html
@@ -25,10 +25,10 @@
 
 
 {% block logo %}
-    <a href="{% url 'wisdom' %}">
+{#    <a href="{% url 'wisdom' %}">#}
         <img src="{% static  'wall headers/wall Of Wisdom.png' %}" class="img-fluid" id="title_it" alt="website logo"
              style="max-height: 3rem;" title="wisdom on these youngings!">
-    </a>
+{#    </a>#}
     <br>
     <br>
 
