--- a/templates/wallOf/frustrations.html
+++ b/templates/wallOf/frustrations.html
@@ -34,11 +34,11 @@
 
 
 {% block logo %}
-    <a href="{% url 'frustrations' %}">
+{#    <a href="{% url 'frustrations' %}">#}
         <img src="{% static  'wall headers/wall-of-header png.png' %}" class="img-fluid" id="title_it"
              alt="website logo"
              style="max-height: 6rem;" title="UGGHHHHHHH!!!!!!!!!!!!">
-    </a>
+{#    </a>#}
 
     {#            <a href="{% url 'frustrations' %}">#}
     {#            <img src="{% static  'wall headers/the wall of frustrations.png' %}" class="img-fluid" id="title_it"#}
