--- a/templates/wallOf/secrete.html
+++ b/templates/wallOf/secrete.html
@@ -32,11 +32,11 @@
 
 
 {% block logo %}
-    <a href="{% url 'secretes' %}" title="wall of secretes">
+{#    <a href="{% url 'secretes' %}" title="wall of secretes">#}
         <img src="{% static  'wall headers/wall of secretes.png' %}" class="img-fluid" id="title_it"
              alt="wall of secretes"
              style="max-height: 2.5rem;" title="shhhhh!!!">
-    </a>
+{#    </a>#}
     <br>
     <br>
 
