--- a/templates/wallOf/secret.html
+++ b/templates/wallOf/secret.html
@@ -48,7 +48,7 @@
 
 {% endblock %}
 
-{% block postings %}{{ posts.secrete }} {% endblock %}
+{% block postings %}{{ posts.secret }} {% endblock %}
 
 {% block card_color %} bg-dark {% endblock %}
 
