cleaned static logos

--- a/templates/Base_All.html
+++ b/templates/Base_All.html
@@ -156,7 +156,7 @@
     <div class="logo-it" style=" padding-left: 8%;">
         {% block logo %}
             <a href="{% url 'secretes' %}" class="">
-                <img src="{% static  'wall headers/wall of secretes.png' %}" class="img-fluid" id="title_it"
+                <img src="{% static  'wall headers/wall Of Wisdom.png' %}" class="img-fluid" id="title_it"
                      alt="website logo"
                      style="max-height: 5rem;" title="uggghhhh">
             </a>
