--- a/templates/wallOf/index.html
+++ b/templates/wallOf/index.html
@@ -131,7 +131,7 @@
 
     <div style="width: 80%">
         <a href="{% url 'frustrations' %}">
-            <img src="{% static  'wall headers/wall-of-header png.png' %}" class="img-fluid" id="title_it"
+            <img src="{% static  'wall headers/wall-of-header.png' %}" class="img-fluid" id="title_it"
                  alt="website logo"
                  style="max-height: 6rem;" title="UGGHHHHHHH!!!!!!!!!!!!">
         </a>
