--- a/templates/wallOf/frustrations.html
+++ b/templates/wallOf/frustrations.html
@@ -34,11 +34,11 @@
 
 
 {% block logo %}
-{#    <a href="{% url 'frustrations' %}">#}
-        <img src="{% static  'wall headers/wall-of-header.png' %}" class="img-fluid" id="title_it"
-             alt="website logo"
-             style="max-height: 6rem;" title="UGGHHHHHHH!!!!!!!!!!!!">
-{#    </a>#}
+    {#    <a href="{% url 'frustrations' %}">#}
+    <img src="{% static  'wall headers/wall-of-header.png' %}" class="img-fluid" id="title_it"
+         alt="website logo"
+         style="max-height: 6rem;" title="UGGHHHHHHH!!!!!!!!!!!!">
+    {#    </a>#}
 
     {#            <a href="{% url 'frustrations' %}">#}
     {#            <img src="{% static  'wall headers/the wall of frustrations.png' %}" class="img-fluid" id="title_it"#}
@@ -55,17 +55,28 @@
 
 
 {% block if_block %}
+
     {% if posts.vote >= 50 %}
         <img src="{% static 'pictures/why you no.png' %}" alt="why you no.."
-             style="position: relative;float: left; max-width: 20%; margin-right: 1rem" class="">
+             style="position: relative; float: left; max-width: 14%; margin-right: 1rem" class="img-fluid">
 
     {% endif %}
 
     {% if posts.vote >= 100 %}
         <img src="{% static 'pictures/uggghhhh.webp' %}" alt="uuughhhhhh"
-             style="position: relative; float: right; max-width: 20%; max-height: 20rem; margin-left: 1rem;"
+             style="position: relative; float: right; max-width: 14%; max-height: 15rem; margin-left: 1rem;"
              class="img-fluid">
     {% endif %}
+
+    {% if posts.vote <= -50 %}
+        <img src="{% static 'pictures/really.gif' %}" alt="looking at you like 'really?'"
+             style="position: relative; float: left; max-width: 14%; margin-right: 1rem"
+             class="img-fluid wow slideInLeft">
+
+    {% endif %}
+
+
+
 {% endblock %}
 
 {% block postings %}{{ posts.frustration }} {% endblock %}
