--- a/templates/wallOf/frustrations.html
+++ b/templates/wallOf/frustrations.html
@@ -65,12 +65,12 @@
     {% if posts.vote >= 100 %}
         <img src="{% static 'pictures/uggghhhh.webp' %}" alt="uuughhhhhh"
              style="position: relative; float: right; max-width: 14%; max-height: 15rem; margin-left: 1rem;"
-             class="img-fluid">
+             class="img-fluid ">
     {% endif %}
 
     {% if posts.vote <= -50 %}
         <img src="{% static 'pictures/really.gif' %}" alt="looking at you like 'really?'"
-             style="position: relative; float: left; max-width: 14%; margin-right: 1rem"
+             style="position: relative; float: left; max-width: 14%; margin-right: 1rem;"
              class="img-fluid wow slideInLeft">
 
     {% endif %}
