pic and post aligned col size changed vote font

--- a/templates/Base_All.html
+++ b/templates/Base_All.html
@@ -199,7 +199,7 @@
 
     <div class="row">
         <div class="container-fluid d-flex justify-content-center">
-            <div class="col-12 col-xs-12 col-sm-12 col-md-12 col-lg-10 col-xl-11" style="padding: 1.5rem;">
+            <div class="col-12 col-xs-12 col-sm-11 col-md-11 col-lg-10 col-xl-11" style="">
 
 
                 {% block if_block %}
@@ -209,7 +209,7 @@
 
                 <div class="card text-white {% block card_color %} bg-danger {% endblock %} mb-3 wow
                     {% block animate %}fadeInRight {% endblock %}"
-                     style="max-width: 64rem; margin: auto;"
+                     style="max-width: 64%; min-width: 60%; margin: auto; display: block;"
                      title="{% block card_title %} Post {% endblock %}">
 
 
@@ -228,7 +228,7 @@
                         <span class="date-it">{{ posts.date_and_time }}</span>
 
 
-                        <p id="{{ posts.salted_pk }}">{{ posts.vote }}</p>
+                        <p class="vote-class" id="{{ posts.salted_pk }}">{{ posts.vote }}</p>
 
 
                         <div class="btn-group btn-group-toggle" data-toggle="buttons">
