--- a/templates/static/css/wallOf/wallOf style.css
+++ b/templates/static/css/wallOf/wallOf style.css
@@ -2,8 +2,8 @@
 @import url('https://fonts.googleapis.com/css?family=Londrina+Solid&display=swap');
 
 
-body{
-    overflow-x:hidden;
+body {
+    overflow-x: hidden;
 }
 
 #id_title {
@@ -123,7 +123,8 @@ label {
     .title-it {
         font-size: 3.5vw;
     }
-    .logo-it{
+
+    .logo-it {
         /*padding-left: 100rem;*/
         /*margin-left: 1rem;*/
     }
@@ -222,6 +223,10 @@ label {
     .title-it {
         font-size: 4vw;
     }
+
+    .vote-class {
+        font-size: 2vw;
+    }
 }
 
 /*        // Medium devices (tablets, 768px and up)*/
@@ -236,6 +241,10 @@ label {
 
     .title-it {
         font-size: 3.5vw;
+    }
+
+    .vote-class {
+        font-size: 1.55vw;
     }
 }
 
@@ -252,6 +261,10 @@ label {
     .title-it {
         font-size: 2.6vw;
     }
+
+    .vote-class {
+        font-size: 1.24vw;
+    }
 }
 
 /*        // Extra large devices (large desktops, 1200px and up)*/
@@ -267,8 +280,13 @@ label {
     .title-it {
         font-size: 2vw;
     }
+
+    .vote-class {
+        font-size: 1.4vw;
+    }
 }
 
+/*this is 1600 px*/
 @media (min-width: 100em) {
     /* hi-res laptops and desktops */
     .posting {
@@ -281,6 +299,10 @@ label {
 
     .title-it {
         font-size: 2vw;
+    }
+
+    .vote-class {
+        font-size: 1.2vw;
     }
 }
 
@@ -550,12 +572,6 @@ nav.mostrar {
     display: block;
     margin-bottom: 10px;
 }
-
-
-
-
-
-
 
 
 a {
