--- a/templates/wallOf/frustrations.html
+++ b/templates/wallOf/frustrations.html
@@ -58,7 +58,8 @@
 
     {% if posts.vote >= 50 %}
         <img src="{% static 'pictures/why you no.png' %}" alt="why you no.."
-             style="position: relative; float: left; max-width: 14%; margin-right: 1rem; display: inline-block" class="img-fluid">
+             style="position: relative; float: left; max-width: 14%; margin-right: 1rem; display: inline-block"
+             class="img-fluid">
 
     {% endif %}
 
