--- a/templates/Base_All.html
+++ b/templates/Base_All.html
@@ -184,7 +184,7 @@
                 <br>
 
                 <input type="submit" hidden name="posted" value="this_post">
-                <button type="submit" class="btn btn-primary" style="size: 20rem" name="postings">save
+                <button type="submit" class="btn btn-primary btn-lg" style="size: 20rem" name="postings">save
                 </button>
                 <br>
                 <br>
