menu got secrets

--- a/templates/Base_All.html
+++ b/templates/Base_All.html
@@ -128,6 +128,7 @@
             <li><a href="{% url 'frustrations' %}" style="font-family: sans-serif"><span>Wall of Frustrations</span></a>
             </li>
             <li><a href="{% url 'wisdom' %}"><span>Wall of Wisdom</span></a></li>
+            <li><a href="{% url 'secrets' %}"><span>Wall of Secret</span></a></li>
         </ul>
     </nav>
 
