--- a/templates/Base_All.html
+++ b/templates/Base_All.html
@@ -118,10 +118,10 @@
 
 {#<h1 class="wow lightSpeedIn" id="title_it">Wall of Frustrations</h1>#}
 
-<div style="width: 80%" class="row">
+{% comment %}<div style="width: 80%" class="row">{% endcomment %}
 
 
-    <div id='oscuro'></div>
+    {% comment %}<div id='oscuro'></div>
 
     <nav id='menu-lateral' role='navigation'>
         <ul class='menu'>
@@ -153,7 +153,43 @@
 
 
         <!--FIN CONTENIDO CONTENIDO -->
-    </main>
+    </main>{% endcomment %}
+
+
+
+
+
+<nav class="navbar navbar-expand-lg navbar-light bg-primary">
+  <a class="navbar-brand text-light" href="#">Navbar</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="navbar-nav">
+      <a class="nav-item nav-link active text-light" href="#">Home <span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link text-light" href="#">Features</a>
+      <a class="nav-item nav-link text-light" href="#">Pricing</a>
+      <a class="nav-item nav-link disabled text-light" href="#">Disabled</a>
+    </div>
+  </div>
+</nav>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     <br>
     <br>
@@ -169,7 +205,7 @@
         {% endblock %}
 
     </div>
-</div>
+{% comment %}</div>{% endcomment %}
 
 
 <div class="form-group container-fluid wow fadeInRight" style="padding: 1rem;">
