--- a/templates/static/css/wallOf/wallOf style.css
+++ b/templates/static/css/wallOf/wallOf style.css
@@ -432,7 +432,7 @@ a {
 }
 
 /***********************/
-.menu {
+/*.menu {
     list-style: none;
     margin: 2em auto;
     padding-left: 0;
@@ -578,7 +578,7 @@ a {
     text-decoration: none;
 }
 
-/***********************/
+!***********************!
 .menu {
     list-style: none;
     margin: 2em auto;
@@ -718,4 +718,10 @@ nav.mostrar {
     font-size: 28px;
     display: block;
     margin-bottom: 10px;
-}
+}*/
+
+/***********************************************************************************/
+
+
+
+
