--- a/templates/static/css/wallOf/wallOf style.css
+++ b/templates/static/css/wallOf/wallOf style.css
@@ -431,8 +431,9 @@ a {
     text-decoration: none;
 }
 
+
 /***********************/
-/*.menu {
+.menu {
     list-style: none;
     margin: 2em auto;
     padding-left: 0;
@@ -578,7 +579,7 @@ a {
     text-decoration: none;
 }
 
-!***********************!
+
 .menu {
     list-style: none;
     margin: 2em auto;
@@ -718,7 +719,7 @@ nav.mostrar {
     font-size: 28px;
     display: block;
     margin-bottom: 10px;
-}*/
+}
 
 /***********************************************************************************/
 
