--- a/templates/static/css/wallOf/wallOf style.css
+++ b/templates/static/css/wallOf/wallOf style.css
@@ -433,6 +433,7 @@ a {
 
 
 /***********************/
+/*
 .menu {
     list-style: none;
     margin: 2em auto;
@@ -720,6 +721,7 @@ nav.mostrar {
     display: block;
     margin-bottom: 10px;
 }
+*/
 
 /***********************************************************************************/
 
