--- a/templates/static/css/wallOf/wallOf style.css
+++ b/templates/static/css/wallOf/wallOf style.css
@@ -432,8 +432,12 @@ a {
 }
 
 
-/***********************/
-/*
+
+
+
+
+
+*********************
 .menu {
     list-style: none;
     margin: 2em auto;
@@ -721,7 +725,6 @@ nav.mostrar {
     display: block;
     margin-bottom: 10px;
 }
-*/
 
 /***********************************************************************************/
 
