white labels ready

--- a/templates/Base_All.html
+++ b/templates/Base_All.html
@@ -185,7 +185,7 @@
 
                 {% csrf_token %}
                 {{ postF.as_p }}
-                <span id="chars">240</span> characters remaining
+                <span id="chars">240</span> <span id="char-String">characters remaining</span>
                 <br>
 
                 <input type="submit" hidden name="posted" value="this_post">
