working nav logo at bottom most fonts but not looking cool

--- a/templates/static/css/wallOf/wallOf style.css
+++ b/templates/static/css/wallOf/wallOf style.css
@@ -105,7 +105,7 @@ label {
     color: white;
 }
 
-#char-String{
+#char-String {
     color: white;
 }
 
@@ -436,6 +436,54 @@ label {
 a {
     text-decoration: none;
 }
+
+@font-face {
+    font-family: wisdom;
+    src: url(templates/static/font/FRADMCN.TTF);
+
+}
+
+
+@font-face {
+    font-family: secret;
+    src: url(templates/static/font/Peace Sans Webfont.ttf);
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
