--- a/templates/Base_All.html
+++ b/templates/Base_All.html
@@ -86,6 +86,10 @@
 
     {% endblock %}
 
+    {# fonts #}
+    <link href="https://fonts.googleapis.com/css?family=Londrina+Solid&display=swap" rel="stylesheet">
+
+
     <style>
         body {
             width: 100%;
@@ -163,49 +167,44 @@
 </div>{% endcomment %}
 
 
+<nav class="navbar navbar-expand-lg navbar-light bg-dark">
+    {#  <a class="navbar-brand" href="#">Navbar</a>#}
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+            {#      <a class="nav-item nav-link text-white active" href="#">Home <span class="sr-only">(current)</span></a>#}
 
+            <a class="nav-item nav-link"
+               style="color: #F15A24; font-size: 150%; font-family: 'Londrina Solid', cursive; letter-spacing: 0.154rem;"
+               href="{% url 'frustrations' %}">Walls Of Frustrations</a>
 
+            <a class="nav-item nav-link "
+               style="color: #FF05F2; font-size: 150%; font-family:'secret', cursive; letter-spacing: 0.154remrem;"
+               href="{% url 'secrets' %}">Walls Of Secrets</a>
 
+            <a class="nav-item nav-link "
+               style="color: #C10DE8; font-size: 150%; font-family: 'wisdom', cursive; letter-spacing: 0.154rem;"
+               href="{% url 'wisdom' %}"
+               tabindex="-1" aria-disabled="true">Walls Of Wisdom</a>
 
-
-
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-    <div class="navbar-nav">
-      <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-      <a class="nav-item nav-link" href="#">Features</a>
-      <a class="nav-item nav-link" href="#">Pricing</a>
-      <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        </div>
     </div>
-  </div>
 </nav>
 
 
+<div class="logo-it" style="display: block; margin: auto; width: auto; text-align: center; padding-top: 1rem;">
+    {% block logo %}
+        <a href="{% url 'secretes' %}" class="">
+            <img src="{% static  'wall headers/wall Of Wisdom.png' %}" class="img-fluid" id="title_it"
+                 alt="website logo"
+                 style="max-height: 5rem;" title="uggghhhh">
+        </a>
+    {% endblock %}
+</div>
 
-
-
-
-
-
-
-
-
-
-
-{% comment %}    <div class="logo-it" style="display: block; margin: auto; width: auto; padding-left: 10%; ">
-        {% block logo %}
-            <a href="{% url 'secretes' %}" class="">
-                <img src="{% static  'wall headers/wall Of Wisdom.png' %}" class="img-fluid" id="title_it"
-                     alt="website logo"
-                     style="max-height: 5rem;" title="uggghhhh">
-            </a>
-        {% endblock %}
-
-    </div>{% endcomment %}
 {#</div>#}
 
 
