nav working but logo @ bott and font bad

--- a/templates/Base_All.html
+++ b/templates/Base_All.html
@@ -182,11 +182,11 @@
                href="{% url 'frustrations' %}">Walls Of Frustrations</a>
 
             <a class="nav-item nav-link "
-               style="color: #FF05F2; font-size: 150%; font-family:'secret', cursive; letter-spacing: 0.154remrem;"
+               style="color: #FF05F2; font-size: 150%; font-family:'Londrina Solid', cursive; letter-spacing: 0.154remrem;"
                href="{% url 'secrets' %}">Walls Of Secrets</a>
 
             <a class="nav-item nav-link "
-               style="color: #C10DE8; font-size: 150%; font-family: 'wisdom', cursive; letter-spacing: 0.154rem;"
+               style="color: #C10DE8; font-size: 150%; font-family: 'Londrina Solid', cursive; letter-spacing: 0.154rem;"
                href="{% url 'wisdom' %}"
                tabindex="-1" aria-disabled="true">Walls Of Wisdom</a>
 
