nav working but logo @ bott and font bad backGround col

--- a/templates/Base_All.html
+++ b/templates/Base_All.html
@@ -178,15 +178,18 @@
             {#      <a class="nav-item nav-link text-white active" href="#">Home <span class="sr-only">(current)</span></a>#}
 
             <a class="nav-item nav-link"
-               style="color: #F15A24; font-size: 150%; font-family: 'Londrina Solid', cursive; letter-spacing: 0.154rem;"
+               style="color: #F15A24; font-size: 150%; font-family: 'Londrina Solid', cursive; letter-spacing: 0.154rem;
+               background-color: green;"
                href="{% url 'frustrations' %}">Walls Of Frustrations</a>
 
             <a class="nav-item nav-link "
-               style="color: #FF05F2; font-size: 150%; font-family:'Londrina Solid', cursive; letter-spacing: 0.154remrem;"
+               style="color: #FF05F2; font-size: 150%; font-family:'Londrina Solid', cursive; letter-spacing: 0.154rem;
+               background-color: white"
                href="{% url 'secrets' %}">Walls Of Secrets</a>
 
             <a class="nav-item nav-link "
-               style="color: #C10DE8; font-size: 150%; font-family: 'Londrina Solid', cursive; letter-spacing: 0.154rem;"
+               style="color: #C10DE8; font-size: 150%; font-family: 'Londrina Solid', cursive; letter-spacing: 0.154rem;
+               background-color: lightblue"
                href="{% url 'wisdom' %}"
                tabindex="-1" aria-disabled="true">Walls Of Wisdom</a>
 
