commented out old jquery because not needed anymore

--- a/templates/Base_All.html
+++ b/templates/Base_All.html
@@ -319,7 +319,9 @@
 <br>
 
 
+{% comment %}
 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+{% endcomment %}
 
 <script>
     $(document).ready(function () {
