transparent kind of background

--- a/templates/Base_All.html
+++ b/templates/Base_All.html
@@ -100,6 +100,18 @@
             margin: 0;
             padding: 0;
         }
+
+        @font-face {
+            font-family: wisdom;
+            src: url({% static 'font/FRADMCN.TTF' %});
+        }
+
+
+        @font-face {
+            font-family: secret;
+            src: url({% static 'font/Peace Sans Webfont.ttf' %});
+        }
+
     </style>
 
     {% block style %}
@@ -167,7 +179,7 @@
 </div>{% endcomment %}
 
 
-<nav class="navbar navbar-expand-lg navbar-light bg-dark">
+<nav class="navbar navbar-expand-lg navbar-light " style="background-color: rgba(13, 12, 12, 0.48);">
     {#  <a class="navbar-brand" href="#">Navbar</a>#}
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
