white background head

--- a/templates/Base_All.html
+++ b/templates/Base_All.html
@@ -207,7 +207,7 @@
 </nav>
 
 
-<div class="logo-it" style="display: block; margin: auto; width: auto; text-align: center; padding-top: 1rem; background-color: white">
+<div class="logo-it" style="display: block; margin: auto; width: auto; text-align: center; padding-top: 1rem; background-color: white;">
     {% block logo %}
         <a href="{% url 'secretes' %}" class="">
             <img src="{% static  'wall headers/wall Of Wisdom.png' %}" class="img-fluid" id="title_it"
