--- a/templates/wallOf/frustrations.html
+++ b/templates/wallOf/frustrations.html
@@ -35,7 +35,7 @@
 
 {% block logo %}
     {#    <a href="{% url 'frustrations' %}">#}
-    <img src="{% static  'wall headers/wall-of-header.png' %}" class="img-fluid" id="title_it"
+    <img src="{% static  'wall headers/wall of frustrations.svg' %}" class="img-fluid" id="title_it"
          alt="website logo"
          style="max-height: 6rem;" title="UGGHHHHHHH!!!!!!!!!!!!">
     {#    </a>#}
