--- a/templates/wallOf/secret.html
+++ b/templates/wallOf/secret.html
@@ -33,9 +33,9 @@
 
 {% block logo %}
 {#    <a href="{% url 'secretes' %}" title="wall of secretes">#}
-        <img src="{% static  'wall headers/wall of secrets.png' %}" class="img-fluid" id="title_it"
+        <img src="{% static  'wall headers/wall of secrets.svg' %}" class="img-fluid" id="title_it"
              alt="wall of secretes"
-             style="max-height: 5rem;" title="shhhhh!!!">
+             style="max-height: 7rem;" title="shhhhh!!!">
 {#    </a>#}
     <br>
     <br>
