--- a/templates/Base_All.html
+++ b/templates/Base_All.html
@@ -92,7 +92,7 @@
 
     <style>
         body {
-            background-image: url('{% static 'pictures/brick and blue.jpg' %}');
+            background-image: url('{% static 'pictures/middle-min.jpg' %}');
             background-size: contain;
         }
 
