min height for svg

--- a/templates/wallOf/frustrations.html
+++ b/templates/wallOf/frustrations.html
@@ -37,7 +37,7 @@
     {#    <a href="{% url 'frustrations' %}">#}
     <img src="{% static  'wall headers/wall of frustrations.svg' %}" class="img-fluid" id="title_it"
          alt="website logo"
-         style="max-height: 6rem;" title="UGGHHHHHHH!!!!!!!!!!!!">
+         style="min-height: 3rem; max-height: 6rem;" title="UGGHHHHHHH!!!!!!!!!!!!">
     {#    </a>#}
 
     {#            <a href="{% url 'frustrations' %}">#}
