--- a/templates/wallOf/secret.html
+++ b/templates/wallOf/secret.html
@@ -35,7 +35,7 @@
 {#    <a href="{% url 'secretes' %}" title="wall of secretes">#}
         <img src="{% static  'wall headers/wall of secrets.svg' %}" class="img-fluid" id="title_it"
              alt="wall of secretes"
-             style="max-height: 7rem;" title="shhhhh!!!">
+             style="min-height: 3rem; max-height: 7rem;" title="shhhhh!!!">
 {#    </a>#}
     <br>
     <br>
