--- a/templates/Base_All.html
+++ b/templates/Base_All.html
@@ -208,7 +208,7 @@
         <a href="{% url 'secretes' %}" class="">
             <img src="{% static  'wall headers/wall Of Wisdom.png' %}" class="img-fluid" id="title_it"
                  alt="website logo"
-                 style="max-height: 5rem;" title="uggghhhh">
+                 style="min-height: 2rem; max-height: 5rem;" title="uggghhhh">
         </a>
     {% endblock %}
 </div>
